Feat: video uploader, docker config
