# api-service/src/modules/file-uploader/file-uploader.controller.ts
@@ -12,6 +12,7 @@ import { fileMimetypeFilter } from 'src/shared/helpers/file-mime-type-filter.hel
 import { ImageUploadInputDto } from './dtos/file-uploader-input.dto';
 import { ImageUploadReponseDto } from './dtos/file-uploader-response.dto';
 
+const MAX_FILE_SIZE = 20480;
 @Controller({ path: 'file-uploader' })
 @ApiTags('File Uploader')
 export class FileUploaderController {
@@ -29,6 +30,36 @@ export class FileUploaderController {
   )
   @ApiConsumes('multipart/form-data')
   async uploadImage(
+    @Body() data: ImageUploadInputDto,
+    @UploadedFile() file: Express.Multer.File,
+  ): Promise<ImageUploadReponseDto> {
+    return { url: file.path };
+  }
+
+  @Post('/video')
+  @UseInterceptors(
+    FileInterceptor('file', {
+      fileFilter: fileMimetypeFilter([
+        'mp4',
+        'webm',
+        'm4v',
+        'flv',
+        'avi',
+        '3gp',
+      ]),
+      limits: {
+        fileSize: MAX_FILE_SIZE,
+      },
+      storage: diskStorage({
+        destination: './public/upload',
+        filename(req, file, callback) {
+          return callback(null, `${Date.now()}_${file.originalname}`);
+        },
+      }),
+    }),
+  )
+  @ApiConsumes('multipart/form-data')
+  async uploadVideo(
     @Body() data: ImageUploadInputDto,
     @UploadedFile() file: Express.Multer.File,
   ): Promise<ImageUploadReponseDto> {
